--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="nb">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5J2E5C4XHQ"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-5J2E5C4XHQ');
+	</script>
+
 	<meta charset="utf-8">
 	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
@@ -13,6 +23,7 @@
     <meta property="og:description" content="Oslo Kommune: Fall og brudd" />
     <meta property="og:image" content="https://fallogbrudd.no/assets/some.png" />
 	
+	<!-- Local CSS File-->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Fall og Brudd</title>
 </head>
